<resources>
    <string name="app_name">FacebookInterface</string>
    <string name="home_activity">Home</string>
    <string name="exemple_gmail_com">exemple@gmail.com</string>
    <string name="mot_de_passe">mot de passe</string>
    <string name="se_connecter">se connecter</string>
    <string name="creer_un_compte">creer un compte?</string>
    <string name="page_d_accueil">Page d\'accueil</string>
    <string name="title">Title</string>
    <string name="j_aime">j\'aime</string>
    <string name="partager">partager</string>
    <string name="description">description</string>
    <string name="image">image</string>
    <string name="ajouter">Ajouter</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>


</resources>