<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="2dp"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants"
    >
<!--    rendre la liste clickable android:descendantFocusability="blocksDescendants"   -->



    <ImageView
        android:id="@+id/image"
        android:layout_width="100dp"
        android:layout_height="120dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:srcCompat="@tools:sample/avatars"
        android:scaleType="centerCrop"
        android:contentDescription="@string/image" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        app:layout_constraintStart_toEndOf="@id/image"
        app:layout_constraintTop_toTopOf="@id/image"
        android:layout_marginStart="16dp"
        android:textAppearance="?attr/textAppearanceBody2"
        />

    <ImageView
        android:id="@+id/show_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/title"
        android:layout_marginEnd="16dp"
        app:srcCompat="@drawable/ic_baseline_more_horiz_24"

         />
    <TextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/image"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        />

    <Button
        android:id="@+id/btn_like"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:gravity="bottom"
        android:text="@string/j_aime"
        android:textColor="@color/blue"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/image"
        app:layout_constraintStart_toStartOf="@id/title"

        />
    <Button
        android:id="@+id/btn_share"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:gravity="bottom"
        android:text="@string/partager"
        android:textColor="@color/black"
        android:layout_marginStart="3dp"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/image"
        app:layout_constraintStart_toEndOf="@id/btn_like"
        />




</androidx.constraintlayout.widget.ConstraintLayout>