<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:padding="16dp"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="288dp"
        android:layout_height="257dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/facebook_logo_png_hd" />

    <EditText
        android:id="@+id/edt_mail"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:hint="@string/exemple_gmail_com"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:hint="@string/mot_de_passe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/edt_mail"
        app:layout_constraintTop_toBottomOf="@id/edt_mail" />

    <Button
        android:id="@+id/btn_connexion"
        android:layout_width="154dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:text="@string/se_connecter"
        android:textColor="@color/blue"
        app:layout_constraintStart_toStartOf="@id/edt_mail"
        app:layout_constraintTop_toBottomOf="@id/edt_password"

        />
    <TextView
        android:id="@+id/creer_compte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/creer_un_compte"
        android:textColor="@color/white"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/edt_password"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/besoin_aide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/creer_un_compte"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>